@@ -101,6 +101,21 @@ g_object_connect (G_OBJECT (greeter), "quit", G_CALLBACK (quit_cb), NULL);
 
 @ldmgreeter: the object which received the signal.
 
+<!-- ##### SIGNAL LdmGreeter::select-guest ##### -->
+<para>
+
+</para>
+
+@ldmgreeter: the object which received the signal.
+
+<!-- ##### SIGNAL LdmGreeter::select-user ##### -->
+<para>
+
+</para>
+
+@ldmgreeter: the object which received the signal.
+@arg1: 
+
 <!-- ##### SIGNAL LdmGreeter::show-message ##### -->
 <para>
 
