@@ -27,7 +27,8 @@ typedef enum
     GREETER_MESSAGE_QUIT                    = 102,
     GREETER_MESSAGE_PROMPT_AUTHENTICATION   = 103,
     GREETER_MESSAGE_END_AUTHENTICATION      = 104,
-    GREETER_MESSAGE_USER_DEFAULTS           = 106
+    GREETER_MESSAGE_SELECT_USER             = 107,
+    GREETER_MESSAGE_SELECT_GUEST            = 108
 } GreeterMessage;
 
 #endif /* _GREETER_PROTOCOL_H_ */
